--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@ body {
     font-family: Smythe, 'cursive';
     
 }
+button{
+    cursor: pointer;
+}
 
 h1,h2,h3,h4{
     padding: 0;
@@ -15,6 +18,34 @@ section{
 }
 
 /* Layout */
+.modal{
+
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    border: 1px solid black;
+    
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal__customer-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    padding: 1em;
+
+    background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+
+}
 
 
 header{
@@ -54,6 +85,9 @@ header p{
 .text-container h3,p,h4{
     margin: 1px;
     
+}
+#order-item-container{
+    display: none;
 }
 #order-item-container h3{
     text-align: center;
